[package]
name = "thrust"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "ThRust is a software framework for thermodynamic and probabilistic computing."
homepage = "http://thrust-lang.org"
repository = "https://github.com/chaseklvk/thrust"
readme = "README.md"
keywords = ["physics", "machine-learning", "thermodynamics", "simulation"]
exclude = ["docs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.2"
plotters = "0.3.4"
rand = "0.8.5"
